# subscription_manager

./: .pre-commit-config.yaml  pyproject.toml
