[project]
name = "subscription-manager"
version = "0.1.0"
description = "Manage subscriptions and notify users"
authors = [
    {name = "Vladyslav Shepilov", email = "vladyslav.shepilov@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.34.0,<1.0.0",
    "sqlalchemy>=2.0.40,<3.0.0",
    "asyncpg>=0.30.0,<1.0.0",
    "alembic>=1.15.0,<2.0.0",
    "pydantic>=2.11.0,<3.0.0",
    "pydantic-settings>=2.9.0,<3.0.0",
    "celery>=5.5.0,<6.0.0",
    "redis>=6.0.0,<7.0.0",
    "httpx>=0.28.1,<1.0.0",
    "structlog>=25.3.0,<26.0.0",
    "sentry-sdk>=2.27.0,<3.0.0",
    "fastapi-cache2>=0.2.2,<1.0.0",
    "python-multipart>=0.0.20,<1.0.0",
    "jinja2>=3.1.6,<4.0.0",
    "aiofiles>=24.1.0,<25.0.0",
    "importlib-metadata>=8.7.0,<9.0.0",
    "aio-pika>=9.5.5,<10.0.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
coverage = "^7.8.0"
mypy = "^1.15.0"
pre-commit = "^4.2.0"
httpx = "^0.28.1"
isort = "^6.0.1"
black = "^25.1.0"
flake8 = "^7.2.0"
types-redis = "^4.6.0.20241004"
types-python-dateutil = "^2.9.0.20241206"
docker = "^7.1.0"
